MDEV-25145: JSON_TABLE: Assertion fixed == 1 failed .. on 2nd execution